tests/paczka1/small_fuzzy/44686446.err
Error in line 11: 2MBk A424 7,7
Error in line 12: 2MBk S861 44,4
Error in line 16: DakKW S861 55,W
